--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".BecomeHaveStoreActivity" />
         <activity android:name=".BecomeNotHaveStoreActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".Check_StoreInfo"></activity>
+        <activity android:name=".CheckStoreInfo"></activity>
     </application>
 
 </manifest>
