--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <meta-data
         android:name="com.google.android.maps.v2.API_KEY"
@@ -52,7 +52,8 @@
         <activity android:name=".EditMember" />
         <activity android:name=".ReviewStoreActivity" />
         <activity android:name=".EditExistedMenuActivity" />
-        <activity android:name=".EditExistedPhotoActivity"></activity>
+        <activity android:name=".EditExistedPhotoActivity" />
+        <activity android:name=".PreviewStoreInfoActivity"></activity>
     </application>
 
 </manifest>
