--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:largeHeap = "true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -65,7 +65,8 @@
 
         <activity
             android:name=".HomeMapsActivity"
-            android:label="@string/title_activity_home_maps"></activity>
+            android:label="@string/title_activity_home_maps" />
+        <activity android:name=".MyFavoriteStore"></activity>
     </application>
 
 </manifest>
