--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cce.nkfust.tw.bentoofking">
-
+    <permission android:name="com.cce.nkfust.tw.bentoofking.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"></permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="com.cce.nkfust.tw.permission.MAPS_RECEIVE"></uses-permission>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+
+    
 
     <application
         android:allowBackup="true"
@@ -78,6 +83,7 @@
         <activity android:name=".CheckMemberAppealActivity" />
         <activity android:name=".CheckAppealCommentActivity" />
         <activity android:name=".PushManageActivity" />
+        <activity android:name=".CheckOpponentList" />
         <activity android:name=".ReviewPushActivity"></activity>
     </application>
 
