--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,10 @@
         <activity android:name=".CheckMemberAppealActivity" />
         <activity android:name=".CheckAppealCommentActivity" />
         <activity android:name=".PushManageActivity" />
-        <activity android:name=".CheckOpponentList" />
+        <activity android:name=".CheckOpponentList"
+            android:theme="@style/AppOpponentTheme"/>
+        <activity android:name=".CheckOpponent"
+            android:theme="@style/AppOpponentTheme"/>
         <activity android:name=".ReviewPushActivity"></activity>
         <service android:name=".MyInstanceIDService">
             <intent-filter>
